# crypto-price-tracker

./: .gitignore  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  autopilot-audit.jsonl  config.json  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-project-setup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-api-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-cli-and-display/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-web-dashboard/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-web-ux-add-auto-refresh-countdown-timer-and-manual-refresh-button-to-the-web-dashboard-html-pure-frontend-change-to-static-index-html/: 05-01-PLAN.md  05-01-SUMMARY.md
.planning/phases/06-add-portfolio-tracking-to-the-crypto-tracker/: 06-CONTEXT.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
src/crypto_price_tracker/: alerts.py  alerts_db.py  api.py  cli.py  display.py  exchange.py  models.py  notify.py  portfolio.py  portfolio_db.py  report.py  watchlist_db.py  web.py
tests/: conftest.py  test_alerts.py  test_alerts_db.py  test_api.py  test_cli.py  test_display.py  test_exchange.py  test_notify.py  test_portfolio.py  test_portfolio_db.py  test_report.py  test_watchlist_db.py  test_web.py
(+112 files in other folders)
