[project]
name = "crypto-price-tracker"
version = "0.1.0"
description = "A CLI tool to display cryptocurrency prices from the Bitvavo API"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[project.scripts]
crypto = "crypto_price_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_price_tracker"]
